data/projects/eoce/oop0/errors
copy.cc: In member function ‘virtual List* ListOfDoublyLinkedNodes::copy()’:
copy.cc:7:16: error: expected type-specifier before ‘ListofDoublyLinkedNodes’
  newList = new ListofDoublyLinkedNodes();
                ^~~~~~~~~~~~~~~~~~~~~~~
ar: copy.o: No such file or directory
